data/derived/fa15/progs/unify/prog1682.ml.out
Characters 69-71:
  |Sine(e)->sin(pi*e)
                ^^
Error: This expression has type float but an expression was expected of type
         int
